update index.html to reflect current state of playlist processing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Create a Kenwood Music Editor Light database under Linux">
-    <meta name="keywords" content="kenwood music editor light, database format, schema description, kenwood.dap, linux, python, FAT filenames, MP3, WMA">
+    <meta name="keywords" content="kenwood music editor light, database format, schema description, kenwood.dap, linux, python, FAT filenames, MP3, WMA, playlist, pls">
 
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Open+Sans:400,700'>
@@ -77,7 +77,7 @@
       <ul>
         <li>processes mp3 and wma only at this stage (wma not tested)</li>
         <li>include and exclude regular expression parsing for media types not currently implemented</li>
-        <li>playlists not currently implemented</li>
+        <li>processes pls playlists only at this stage</li>
         <li>international characters are sorted out of order, so "Bäpa" comes after "By The Hand Of My Father" rather than after "Banks of Newfoundland"</li>
       </ul>
 
